# Finetuning-Large-Language-Models-coursera

./: .gitignore  Dockerfile  README.md  pull_email.py  pyproject.toml
.devcontainer/: devcontainer.json  setup-example.fish
lamini_docs_3_steps/final/: config.json  generation_config.json
