[project]
name = "fine-tunning"
version = "0.1.0"
description = "Base PyTorch + Hugging Face project with uv"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "datasets",
    "huggingface-hub",
    "numpy",
    "matplotlib",
    "jupyter",
    "config>=0.5.1",
    "jsonlines>=4.0.0",
    "python-configuration>=0.12.1",
    "scikit-learn>=1.7.2",
]

[tool.uv]
# optional settings

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
